--- a/views/ingredients_steps.html
+++ b/views/ingredients_steps.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Speak Easy</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
@@ -10,8 +14,55 @@
 </head>
 
 <body>
+    <div class="row">
+        <div class="col s12">
+            <div class="card transparent"
+                style="background-image: url('https://as1.ftcdn.net/jpg/02/29/35/48/500_F_229354874_JGNkLO3K9ElnPfEgij3OhXz7mz4093UJ.jpg');">
+                <div class="card-content white-text">
+                    <span class="card-title">
+                        <h1 style="text-align: center;color:black">VIRTUAL EASYSPEAK BAR</h1>
+                    </span>
+                    <!-- <p>
+                        <h5 style="text-align: center;color:black">Please select a drink from the menu<br>Or you can add
+                            your own custom
+                            drink to the menu</h5>
+                    </p> -->
+                </div>
+            </div>
+        </div>
+    </div>
+
 <div class="container">
 
+<!-- well add the images here -->
+<div class="row">
+    <div class="col">
+    <img src="https://www.thespruceeats.com/thmb/4UtOGZ7pW6ZKADHUS6nrYJJ-rwE=/2580x2580/smart/filters:no_upscale()/vodka-martini-recipe-760983-Hero-5bd771cd4cedfd0026121758.jpg" alt="" style="width:200px;height:200px;">
+    </div>
+</div>
+
+<div class="row">
+
+    <div class="col s5">
+    <ul class="collection with-header">
+        <li class="collection-header"><h4>Drink Name here</h4></li>
+        <li class="collection-item">
+            <div> <i class="tiny material-icons">fiber_manual_record</i> Ingredients listed here </div>
+        </li>
+    </ul>
+    </div>
+
+    <div class="col s2"></div>
+
+    <div class="col s5">
+        <h3>To mix...</h3>
+        <p>Instructions here</p>
+    </div>
+
+</div>
+
+
+<!-- old code. ignore for now
 <div class="row">
     {{!-- <h2>name of drink here</h2> --}}
 </div>
@@ -29,12 +80,9 @@
 
     <div class="col">
         <img src="" alt=""> 
-    <div>
+    </div>div>
 
-
-</div>
-
-
+</div> -->
 
 
 
@@ -43,4 +91,5 @@
 
 <script src="../public/js/.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!-- <script type="text/javascript" src="js/materialize.min.js"></script> unuesed javascript
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
