--- a/views/test.html
+++ b/views/test.html
@@ -81,35 +81,35 @@
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s12">
-                            <input value="" id="cat_name" type="text">
+                            <input value="" id="cat_name" type="text" value={{category.category}}>
                             <label class="active" for="cat_name"><span
-                                    style="font-weight: bold;color:dark-grey;">Category</span></label>
+                                    style="font-weight: bold;color:dark-grey;">Category</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input value="" id="drink_name" type="text">
+                            <input value="" id="drink_name" type="text" value={{cocktail.drink}}>
                             <label class="active" for="drink_name"><span
                                     style="font-weight: bold;color:dark-grey;">Cocktail</span></label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input value="" id="drinkimage_name" type="text">
+                            <input value="" id="drinkimage_name" type="text" value={{image.image}}>
                             <label class="active" for="drinkimage_name"><span
                                     style="font-weight: bold;color:dark-grey;">Cocktail's Image</span></label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <textarea id="textarea1" class="materialize-textarea"></textarea>
+                            <textarea id="textarea1" class="materialize-textarea" value={{ingredients.ingredients}}></textarea>
                             <label for="textarea1"><span
                                     style="font-weight: bold;color:dark-grey;">Ingredients</span></label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <textarea id="textarea2" class="materialize-textarea"></textarea>
+                            <textarea id="textarea2" class="materialize-textarea" value={{method.method}}></textarea>
                             <label for="textarea2"><span
                                     style="font-weight: bold;color:dark-grey;">Method</span></label>
                         </div>
