--- a/views/ingredients_steps_mf.html
+++ b/views/ingredients_steps_mf.html
@@ -14,7 +14,7 @@
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="public/styles/styles.css">
+    <link rel="stylesheet" href="../public/styles/styles.css">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
