updated server handlebars

--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -25,6 +25,7 @@
         </ul>
     </div>
     <br>
+    
     <div class="row">
         <div class="col s6">
             <ul class="collection with-header">
@@ -50,6 +51,11 @@
 
 </div>
 
-<script src="../public/js/.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
