--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,27 @@
 </head>
 
 <body>
+  <div class="navbar-fixed active">
+    <nav class="brown accent-4">
+            <a href="#!" class="brand-logo center" style="font-family: cursive;">The SPEAKEASY</a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="sass.html" style="font-family: cursive">The Hooch</a></li>
+                <li><a href="badges.html" style="font-family: cursive">The Bootleggers</a></li>
+            </ul>
+    </nav>
+  </div>
+
   {{{body}}}
+
 </body>
+
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 </html>
