--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,20 +4,7 @@
 
 body {
   background-image: url("https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX2441107.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   height: 100vh;
   background-size: cover;
 };
-
-#indexImage {
-  border-color: burlywood;
-  border-style: solid;
-  margin: auto;
-  padding: 15px;
-  outline-color: burlywood;
-};
-
-#liqourTitle {
-  background-color: black;
-  color: tomato;
-}
