--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+
 <div class="navbar-fixed active">
     <nav class="brown accent-4">
         <div class="nav-wrapper">
@@ -41,3 +42,12 @@
     </div>
     <br>
 </div>
+
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>        
