added 404 page. fixed navbar bug

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,35 @@
-<div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
-  </div>
-</div>
+<br>
+    <body>
+      <div class="container">
+
+          <div class="row">
+              <div class="col s12">
+                  <div style="text-align: center;" id="indexImage">
+                      <img src="https://cdn.britannica.com/63/116463-050-27BE2871/John-A-Leach-New-York-City-agents-1920.jpg"
+                          class="responsive-img" alt="" width="600" height="600" style="border-style: solid; border-color: burlywood; border-width: thick;">
+                  </div>
+
+                  <div style="text-align: center;" id="liqourText">
+                      <div class="row">
+                          <div class="col s12">
+                              <div class="card" style="background-color: burlywood">
+                                <h1 class="display-4 text-center">404 Not Found
+                                  <span role="img" aria-label="Face with rolling eyes">🙄</span>
+                                </h1>
+                                <a href="/">← Back To Home</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+              </div>
+          </div>
+      </div>
+
+    </body>
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="../../public/js/index.js"></script>
+</html>
