--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,14 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Home Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Home Page</title>
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
 </head>
 
 <body>
@@ -13,23 +17,24 @@
     <nav class="brown accent-4">
             <a href="#!" class="brand-logo center" style="font-family: cursive;">The SPEAKEASY</a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html" style="font-family: cursive">The Hooch</a></li>
-                <li><a href="badges.html" style="font-family: cursive">The Bootleggers</a></li>
+                <li><a href="" style="font-family: cursive">The Hooch</a></li>
+                <li><a href="" style="font-family: cursive">The Bootleggers</a></li>
             </ul>
     </nav>
   </div>
 
+
+
+
   {{{body}}}
 
+
+
+
 </body>
-
-<!-- Compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="../../public/js/index.js"></script>
 
 </html>
