--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,17 +1,5 @@
-<div class="navbar-fixed active">
-    <nav class="brown accent-4">
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo center" style="font-family: cursive;">The SPEAKEASY</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html" style="font-family: cursive">The Hooch</a></li>
-                <li><a href="badges.html" style="font-family: cursive">The Bootleggers</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
-    
+ 
 <br>
-
 <div class="container">
     <div style="text-align: center">
         <img src="https://images.squarespace-cdn.com/content/v1/5c9b9981af468385e47c0853/1555704821019-POZMD5XYRZ2NBADLFKG5/ke17ZwdGBToddI8pDm48kLmUbQbtDGsZ8YTTasGILul7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0lqfkVpRp1g_2L-WsTQRP4LE6B0BTbA_B4hx17Wb5wfjT9mR3gzq1SMR4UIbU98M4g/SpeakeasyBar.jpg" alt=""
@@ -19,18 +7,15 @@
     </div>
     <br>
 
-    <div class="row">
-        <div class="col s12">
-            <div class="card">
-                <div class="card-content" style="background-color: burlywood">
-                    <span class="card-title">
-                        <h1 style="text-align: center;color:black">DRINK CATEGORY HERE</h1>
-                    </span>
+    <div>
+        <div class="row">
+            <div class="col s6 offset-s3">
+                <div class="card" style="background-color: burlywood">
+                    <p style="font-weight: bolder; text-align: center">DRINK CATEGORY HERE</p>
                 </div>
             </div>
         </div>
     </div>
-
 
 </div>
 
