--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,3 @@
-.list-group-item {
-  line-height: 2.5;
-}
 
 body {
   background-image: url("https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX2441107.jpg");
@@ -8,3 +5,8 @@ body {
   height: 100vh;
   background-size: cover;
 };
+
+#liqourTitle {
+  text-emphasis: bold;
+
+}
