--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,4 @@
 
-<div class="navbar-fixed active">
-    <nav class="brown accent-4">
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo center" style="font-family: cursive;">The SPEAKEASY</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html" style="font-family: cursive">The Hooch</a></li>
-                <li><a href="badges.html" style="font-family: cursive">The Bootleggers</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
-
 <div class="container">
 <br>
     <div style="text-align: center;" id="indexImage">
@@ -18,8 +6,17 @@
             class="responsive-img" alt="" width="600" height="600" style="border-style: solid; border-color: burlywood; border-width: thick;">
     </div>
 
+    <div style="text-align: center;" id="liqourText">
+        <div class="row">
+            <div class="col s6 offset-s3">
+                <div class="card" style="background-color: burlywood">
+                    <p style="font-weight: bolder;">Pick Your Poison!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div style="text-align: center;">
-        <div style="color: black; font-size: 28px; font-family: cursive;">Pick Your Poison!</div>
         <button class="button" id="vodkaBtn" style="border-style: solid; background-color: burlywood; border-color: black; color: black; font-size: 25px;">
             <img src="https://p7.hiclipart.com/preview/146/365/173/cocktail-garnish-vodka-martini-cocktail-thumbnail.jpg"
                 width="100" height="100" style="border-style: solid; border-color: black;"><br>Vodka
@@ -43,11 +40,8 @@
     <br>
 </div>
 
-<!-- Compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+ 
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>        
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="../../public/js/index.js"></script> 
