--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -22,37 +22,37 @@
 
     <div class="row">
         <h2>Add a drink</h2>
-        <form class="col s12">
+        <form class="col s12" id="fm1">
             <div class="row">
                 <div class="input-field col s12">
-                    <input value="" id="cat_name" type="text" value={{category.category}}>
+                    <input id="input_text" id="cat_name" type="text">
                     <label class="active" for="cat_name"><span
                             style="font-weight: bold;color:dark-grey;">Category</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input value="" id="drink_name" type="text" value={{cocktail.drink}}>
+                    <input id="input_text" id="drink_name" type="text">
                     <label class="active" for="drink_name"><span
                             style="font-weight: bold;color:dark-grey;">Cocktail</span></label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input value="" id="drinkimage_name" type="text" value={{image.image}}>
+                    <input id="input_text" id="drinkimage_name" type="text">
                     <label class="active" for="drinkimage_name"><span
                             style="font-weight: bold;color:dark-grey;">Cocktail's Image</span></label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea id="textarea1" class="materialize-textarea" value={{ingredients.ingredients}}></textarea>
+                    <textarea id="textarea1" class="materialize-textarea"></textarea>
                     <label for="textarea1"><span style="font-weight: bold;color:dark-grey;">Ingredients</span></label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea id="textarea2" class="materialize-textarea" value={{method.method}}></textarea>
+                    <textarea id="textarea2" class="materialize-textarea"></textarea>
                     <label for="textarea2"><span style="font-weight: bold;color:dark-grey;">Method</span></label>
                 </div>
             </div>
