final touches to handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,47 +1,87 @@
-
+<br>
 <div class="container">
 <br>
     <div style="text-align: center;" id="indexImage">
-        <img src="http://thelasocialites.com/wp-content/uploads/2015/06/IMG_1920_1_2.jpg" alt=""
-            class="responsive-img" alt="" width="600" height="600" style="border-style: solid; border-color: burlywood; border-width: thick;">
+        <img src="https://images.squarespace-cdn.com/content/v1/5546e0cde4b099a7d92c263b/1518226240007-I9YX1CHVM932QT95BUXB/ke17ZwdGBToddI8pDm48kGPVK--wGoWXJsqwlxbZlQN7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0mwONMR1ELp49Lyc52iWr5enfxu_O4VeONvneR-F6W8oeFhFqSrYyNrfPB9Y70_gvQ/Blues+Central+-+Williwaw+-+2015+DSC_0470.jpg?format=1500w"
+            class="responsive-img" alt="" width="700" height="700" style="border-style: solid; border-color: burlywood; border-width: thick;">
     </div>
+<br>
 
-    <div style="text-align: center;" id="liqourText">
-        <div class="row">
-            <div class="col s6 offset-s3">
-                <div class="card" style="background-color: burlywood">
-                    <p style="font-weight: bolder;">Pick Your Poison!</p>
+<div class="container" style="border-style: solid; border-color: burlywood; background-color:antiquewhite">
+
+    <div class="container">
+    <div class="row">
+        <div class="grid-example col  s4"></div>
+        <div class="grid-example col  s4">
+        </div>
+        <div class="grid-example col  s4"></div>
+    </div>
+    <div class="row">
+        <div class="grid-example col  s5">
+            <h2 style="font-family: cursive; text-align: center;">Cocktail List</h2>
+            <ul>
+                {{#each cocktail}}
+                <li>
+                    <button class="btn-flat transparent btn1" id="{{this.dataValues.id}}">
+                        <div class="chip">
+                            {{this.dataValues.drink}}
+                        </div>
+                    </button>
+                </li>
+                {{/each}}
+            </ul>
+        </div>
+        <div class="grid-example col  s2"></div>
+        <div class="grid-example col  s5">
+            <h2 style="font-family: cursive; text-align: center;">Results</h2>
+            <div class="row">
+                <h4 style="font-family: cursive; text-align: center;">Cocktail's Sour:</h4>
+                <img class="circle responsive-img" src="" id="addImg">
+            </div>
+            <div class="row">
+                <h5 style="font-family: cursive">Ingredients:</h5>
+                <div class="card-panel">
+                    <p id="addIngred"></p>
                 </div>
             </div>
+            <div class="row">
+                <h5 style="font-family: cursive">method:</h5>
+                <div class="card-panel">
+                    <p id="addMeth"></p>
+                </div>
+            </div>
+
         </div>
     </div>
-
-    <div style="text-align: center;">
-        <button class="button" id="vodkaBtn" style="border-style: solid; background-color: burlywood; border-color: black; color: black; font-size: 25px;">
-            <img src="https://p7.hiclipart.com/preview/146/365/173/cocktail-garnish-vodka-martini-cocktail-thumbnail.jpg"
-                width="100" height="100" style="border-style: solid; border-color: black;"><br>Vodka
-        </button>
-
-        <button class="button" id="tequilaBtn" style="border-style: solid; background-color: burlywood; border-color: black; color: black; font-size: 25px;">
-            <img src="https://i7.pngguru.com/preview/256/741/256/cocktail-garnish-margarita-daiquiri-martini-cocktail-thumbnail.jpg"
-                width="100" height="100" style="border-style: solid; border-color: black"><br>Tequila
-        </button>
-
-        <button class="button" id="whiskeyBtn" style="border-style: solid; background-color: burlywood; border-color: black; color: black; font-size: 25px;">
-            <img src="https://i7.pngguru.com/preview/194/66/425/whiskey-sour-cocktail-harvey-wallbanger-juice-cocktail-thumbnail.jpg"
-                width="100" height="100" style="border-style: solid; border-color: black"><br>Whiskey
-        </button>
-
-        <button class="button" id="rumBtn" style="border-style: solid; background-color: burlywood; border-color: black; color: black; font-size: 25px;">
-            <img src="https://p7.hiclipart.com/preview/377/748/837/cocktail-gin-tequila-sunrise-sour-sea-breeze-cocktails-thumbnail.jpg"
-                width="100" height="100" style="border-style: solid; border-color: black;"><br>Rum
-        </button>
-    </div>
-    <br>
 </div>
 
- 
+</div>
+<br>
+<br>
+<script type="text/javascript">
+    $(".btn1").on("click", function () {
+        var id1 = $(this).attr("id");
+        alert(id1);
+        exports.list = (req, res) => {
+            alert("we have activated userdisplay.js\n");
+            db.query("SELECT images FROM imagesdrinks INNER JOIN cocktails ON imagesdrinks.cocktails_id = cocktails.id WHERE imagesdrinks.id= 1", (error, results) => {
+                console.log('we did a query');
+                if (error) {
+                    console.log("Error: ", error);
+                    res.send({
+                        "code": 400,
+                        "failed": "Error occurred"
+                    });
+                } else {
+                    console.log("Results: ", results);
+                    res.render('/index', { data: results });
+                }
+            });
+        }
+    });
+</script>
+
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="../../public/js/index.js"></script> 
+<script src="../../public/js/index.js"></script>
