--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
+    <title>The SPEAKEASY</title>
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -14,11 +14,12 @@
 
 <body>
   <div class="navbar-fixed active">
-    <nav class="brown accent-4">
+    <nav class="brown accent-4" style="border-style: solid; border-color: burlywood;">
             <a href="#!" class="brand-logo center" style="font-family: cursive;">The SPEAKEASY</a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="" style="font-family: cursive">The Hooch</a></li>
-                <li><a href="" style="font-family: cursive">The Bootleggers</a></li>
+                <li><a href="" style="font-family: cursive">Add One to the List!</a></li>
+                <li><a href="" style="font-family: cursive">The Spirits!</a></li>
+                <li><a href="" style="font-family: cursive">The Bootleggers!</a></li>
             </ul>
     </nav>
   </div>
