--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The SPEAKEASY</title>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <!-- Google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
 
-  <!-- <script src="../../public/js/index.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
-  
-  {{{ body }}}
+    <div class="navbar-fixed active">
+        <nav class="brown accent-4" style="border-style: solid; border-color: burlywood;">
+            <a href="#!" class="brand-logo center" style="font-family: cursive;">The SPEAKEASY</a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="/results" style="font-family: cursive">Add One to the List!</a></li>
+                <li><a href="/index" style="font-family: cursive">Pick your cocktail!</a></li>
+                <li><a href="" style="font-family: cursive">The Bootleggers!</a></li>
+            </ul>
+        </nav>
+    </div>
+
+
+    {{{body}}}
+
+
+
+
 </body>
+
 
 </html>
